tests/Rules/Forms/Fixtures/valid/label_with_for.html.twig
<label for="foo">Name</label>
<input id="foo" />
