tests/Rules/Forms/Fixtures/invalid/input_autocomplete_invalid.html.twig
{# 1 errors #}
<input autocomplete="foo">
